--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,12 @@
             <artifactId>mongodb-driver</artifactId>
             <version>3.0.4</version>
         </dependency>
+        <!--kafka-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.9.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -359,6 +365,16 @@
     </plugin>
     </plugins>
     </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <distributionManagement>
