--- a/pom.xml
+++ b/pom.xml
@@ -366,6 +366,11 @@
             <artifactId>commons-pool</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>net.spy</groupId>
+            <artifactId>spymemcached</artifactId>
+            <version>2.12.1</version>
+        </dependency>
     </dependencies>
 
     <build>
