--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
         <module>ExtractFile</module>
         <module>WebProject</module>
         <module>Hadoop</module>
+        <module>Storm</module>
+        <module>Spark</module>
     </modules>
     <groupId>com.zhou</groupId>
     <artifactId>ProgramLife</artifactId>
@@ -371,7 +373,12 @@
         <artifactId>log4j-over-slf4j</artifactId>
         <version>1.7.7</version>
     </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
     <build>
     <pluginManagement>
     <plugins>
@@ -400,8 +407,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
